# gigapdf-lib

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  THIRD-PARTY-LICENSES.md  fix_broken_defaults.py  llms.txt  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: conformance.yml  release.yml  sdk-docs.yml  tests.yml
crates/core/: Cargo.toml
crates/core/examples/: ocr_image.rs
crates/core/src/: document.rs  error.rs  headerfooter.rs  lexer.rs  lib.rs  object.rs  ocg.rs  parser.rs  serialize.rs
crates/core/src/action/: mod.rs
crates/core/src/annot/: mod.rs
crates/core/src/content/: image.rs  interpret.rs  mod.rs  svg_path.rs  vector.rs
crates/core/src/convert/: build.rs  cfb.rs  chart.rs  csv_import.rs  export_model.rs  grids.rs  import.rs  md_import.rs  mod.rs  office.rs  office_import.rs  ole_doc.rs  ole_ppt.rs  ole_xls.rs  omml.rs  pdfa.rs  project.rs  reverse.rs  rtf.rs  srgb_icc.rs  style.rs  table.rs  tagged.rs  web.rs  zip.rs
crates/core/src/convert/metafile/: emf.rs  mod.rs  raster.rs  wmf.rs
crates/core/src/crypto/: aes.rs  bignum.rs  des.rs  hmac.rs  kdf.rs  md5.rs  mod.rs  rc2.rs  rc4.rs  rsa.rs  sha1.rs  sha256.rs  sha512.rs
crates/core/src/filters/: ascii85.rs  asciihex.rs  ccitt.rs  ccitt_tables.rs  deflate.rs  inflate.rs  jbig2.rs  jbig2_huffman.rs  jbig2_mq.rs  jpx.rs  jpx_container.rs  jpx_dwt.rs  jpx_e2e_tests.rs  jpx_markers.rs  jpx_packet.rs  jpx_t1.rs  lzw.rs  mod.rs  predictor.rs  runlength.rs
crates/core/src/font/: afm.rs  brotli.rs  brotli_dict.rs  brotli_tables.rs  brotli_test_vectors.rs  bundled.rs  catalog.rs  cff.rs  cff_to_otf.rs  cmap.rs  color.rs  embed.rs  encoding.rs  glyphless.rs  google.rs  mod.rs  shape.rs  truetype.rs  type1.rs  webfont.rs
crates/core/src/form/: mod.rs
crates/core/src/html/: bidi.rs  css.rs  diagram.rs  dom.rs  layout.rs  mod.rs  model.rs  page.rs  paint.rs
crates/core/src/js/: ast.rs  boa.rs  builtins.rs  bytecode.rs  compile.rs  dom.rs  interp.rs  lexer.rs  mod.rs  parser.rs  regex.rs  token.rs  value.rs  vm.rs
crates/core/src/link/: mod.rs
crates/core/src/model/: edit.rs  geom.rs  json.rs  mod.rs  sheet.rs  slide.rs  style.rs
crates/core/src/outline/: mod.rs
crates/core/src/raster/: avif.rs  canvas.rs  colorspace.rs  dewarp.rs  gif.rs  jpeg.rs  mesh.rs  mod.rs  ocr.rs  ocr_crnn.rs  ocr_model.rs  ocr_model_alpha.rs  ocr_model_arabic.rs  ocr_model_beng.rs  ocr_model_deva.rs  ocr_model_taml.rs  png.rs  png_decode.rs  render.rs  resize.rs  vp8.rs  vp8_tables.rs  webp.rs
crates/core/src/raster/avif/: cdef.rs  cdef_dir_ref.rs  cdef_filter_ref.rs  cdf.rs  deblock.rs  ipred_ref.rs  itx.rs  itx_ref.rs  lf_ref.rs  lr.rs  msac.rs  palette.rs  predict.rs  scan.rs  tile.rs
crates/core/src/raster/fixtures/: av1_mt2x2.avif  av1_mt2x2_ref.yuv  av1_mtmono.avif  av1_mtmono_ref.yuv  av1cdef_diag.avif  av1cdef_diag.yuv  av1cdef_vsplit.avif  av1cdef_vsplit.yuv  av1cdefoff.avif  av1cdefoff_ref.yuv  av1deblock.avif  av1deblock_ref.yuv  av1noise.avif  av1noise_ref.yuv  av1pal.avif  av1pal2.avif  av1pal_ref.yuv  av1palns.avif  av1palns_ref.yuv  av1test.avif  av1test_ref.yuv  extract_vp8_tables.py  vp8test_ref.yuv
crates/core/src/raster/vp8/: decoder.rs  predict.rs
crates/core/src/recon/: columns.rs  headerfooter.rs  headings.rs  lines.rs  lists.rs  mod.rs  paragraphs.rs  tables.rs  tag_tree.rs
crates/core/src/security/: mod.rs  pubsec.rs
crates/core/src/sign/: der.rs  ltv.rs  mod.rs  pades.rs  pkcs12.rs  timestamp.rs  verify.rs
crates/core/src/sign/fixtures/: cert.der  legacy.p12  modern.p12
crates/core/src/svg/: filter.rs  mod.rs
crates/core/src/text/: direction.rs  mod.rs
crates/core/tests/: html_js.rs  web_font_cmap.rs
crates/ocr-rten/: Cargo.toml  README.md
crates/ocr-rten/assets/: .gitignore
crates/ocr-rten/src/: lib.rs
crates/ocr-rten/tools/: convert_legacy_gpocr.py  fetch_models.sh  train_handwriting.py  train_hebrew.py  validate_legacy_hw.py
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs  rng.rs
deploy/: train_all_parallel.sh  train_breadth.sh  train_hw_nonlatin.sh  train_photo_variants.sh  train_vps.sh
docs/: API.md  CONVERSIONS.md  COOKBOOK.md  DESIGN-signatures-tsa-pades.md  HTML-CSS.md  INSTALL.md  OCR_ARCHITECTURE.md  OCR_TRAINING_DATA.md  OCR_TRAINING_LOG.md  SDK.md  USAGE.md
models/: ocr_alpha.gpocr  ocr_alpha_big.gpocr  ocr_alpha_hw.gpocr  ocr_alpha_photo.gpocr  ocr_alpha_print.gpocr  ocr_arabic.gpocr  ocr_arabic_small.gpocr  ocr_beng.gpocr  ocr_beng_small.gpocr  ocr_cjk.gpocr  ocr_deva.gpocr  ocr_deva_small.gpocr  ocr_gujr.gpocr  ocr_guru.gpocr  ocr_jpn.gpocr  ocr_kann.gpocr  ocr_kor.gpocr  ocr_mlym.gpocr  ocr_taml.gpocr  ocr_taml_small.gpocr  ocr_telu.gpocr  ocr_thai.gpocr
scripts/conformance/: .gitignore  README.md  fetch-schemas.sh  gen-fixtures.mjs  known-schema-issues.json  run.sh
scripts/conformance/validators/: _common.py  requirements.txt  validate.py
sdk/: .gitignore  CHANGELOG.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts  typedoc.json
sdk/scripts/: build-wasm.sh  verify-cerfa-spacing.mjs
sdk/src/: editor.ts  index.ts  node-fs.browser.ts  node-fs.ts  viewer.ts
sdk/test/: image_conversion.test.ts  model_import.test.ts  sdk.test.ts
test/: wasm-smoke.mjs
tools/: download_gfonts.py  gen_catalog.py  google-fonts-metadata.json  train_ocr.py  train_ocr_cnn.py  train_ocr_crnn.py
tools/extract_av1_cdef/: filter_harness  filter_harness.c  harness  harness.c
tools/extract_av1_cdf/: extract_main.c  generate.sh  scan_extract.c
tools/extract_av1_ipred/: dr_deriv.c  filter_body.c  harness  harness.c  ipred_body.c  smweights.c
tools/extract_av1_itx/: harness  harness.c  itx_1d_body.c
tools/extract_av1_lf/: harness  harness.c  lf_body.c
tools/ocr/: __init__.py  bench.py  bench_hw.py  build_cjk_charset.py  cjk_charset.txt  corpora.py  eval.py  fonts.py  gpocr.py  gpocr_to_rs.py  hw_datasets.py  int8_eval.py  jpn_charset.txt  kor_charset.txt  render_lines.py  rs_to_gpocr.py  scripts.py
