[workspace]
resolver = "2"
members = ["crates/core", "crates/wasm"]

[workspace.package]
# Single source of truth for the whole workspace — the core + wasm crates
# inherit this via `version.workspace = true`, kept in lock-step with the npm
# SDK (`sdk/package.json`) so the lib, the WASM blob and the SDK never drift.
version = "0.42.0"
edition = "2021"
license = "PolyForm-Noncommercial-1.0.0"
authors = ["Rony Licha / QR Communication"]
rust-version = "1.94"
repository = "https://github.com/qrcommunication/gigapdf-lib"

# No [workspace.dependencies]: the engine is pure std, no dependencies.

[profile.release]
opt-level = "z"   # optimize for size — matters for the WASM bundle
lto = true
codegen-units = 1
panic = "abort"
strip = true
