[workspace]
resolver = "2"
members = ["crates/core", "crates/wasm", "crates/ocr-rten"]

[workspace.package]
# Single source of truth for the whole workspace — the core + wasm crates
# inherit this via `version.workspace = true`, kept in lock-step with the npm
# SDK (`sdk/package.json`) so the lib, the WASM blob and the SDK never drift.
version = "0.70.0"
edition = "2021"
license = "PolyForm-Noncommercial-1.0.0"
authors = ["Rony Licha / QR Communication"]
rust-version = "1.94"
repository = "https://github.com/qrcommunication/gigapdf-lib"

# No [workspace.dependencies]: the PDF/render/conversion core is pure `std`; the
# only third-party crates (declared per-crate) are RustCrypto for standardized
# crypto/signatures and Boa for the JavaScript engine.

[profile.release]
opt-level = "z"   # optimize for size — matters for the WASM bundle
lto = true
codegen-units = 1
panic = "abort"
strip = true
