[package]
name = "gigapdf-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "PDF editing engine — pure std, no dependencies."

# No dependencies: lexer, object model, xref, FlateDecode, content editing and
# serialization are all pure `std`.
[dependencies]

[dev-dependencies]
# Tests run against ../../fixtures via CARGO_MANIFEST_DIR — still zero deps.

[features]
# Embed per-script CRNN+CTC line-OCR models (trained offline by
# tools/train_ocr_crnn.py → crates/core/src/raster/ocr_model_<group>.rs). OFF by
# default: the base build ships only the mono-glyph model (ocr_model.rs). Enabling a
# group bundles its int8 line recognizer and routes lines to it via ocr_crnn.
ocr-alpha = []   # Latin + Cyrillic + Greek
ocr-cjk = []     # Chinese / Japanese / Korean
ocr-arabic = []  # Arabic / Hebrew (RTL)
ocr-deva = []    # Devanagari
ocr-beng = []    # Bengali
ocr-taml = []    # Tamil
