[package]
name = "gigapdf-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "PDF editing engine — pure std, no dependencies."

# The PDF/Office/image engine (lexer, object model, xref, FlateDecode, content
# editing, rasteriser, conversions) is pure `std` with NO third-party library —
# that is the project's invariant. The two exceptions below are deliberate and
# narrow: cryptography and JavaScript are domains where rolling your own is a
# liability (timing/oracle side-channels, eIDAS non-conformance; multi-year JS
# spec maintenance), so they delegate to audited, wasm-compatible Rust crates.
[dependencies]
# Audited cryptography — RustCrypto. Replaces the former hand-rolled MD5/RC4/AES/
# SHA/RSA/ASN.1/X.509/CMS behind the PDF signing + standard-security-handler glue.
rsa = "0.9"
# `oid` gives Sha256 its AssociatedOid so rsa's prefixed PKCS#1 v1.5 SigningKey
# emits the SHA-256 DigestInfo (exactly what PDF adbe.pkcs7 signatures need).
sha2 = { version = "0.10", features = ["oid"] }
# Seeded keygen RNG + platform RNG for RSA signature blinding (rand 0.8 →
# rand_core 0.6, matching rsa; OsRng draws from getrandom on wasm).
rand = "0.8"
# Hashes + HMAC (RustCrypto) for the PDF security handler, PKCS#12 import and
# document hashing — replace the hand-rolled FIPS implementations.
sha1 = "0.10"
md-5 = "0.10"
hmac = "0.12"
# AES-CBC (constant-time, AES-NI when available) for the PDF security handler
# (AESV2/AESV3) and PKCS#12 PBES2 — replaces the hand-rolled GF(2⁸) AES.
aes = "0.8"
cbc = "0.1"
# Embedded JavaScript engine (pure Rust) for the HTML→PDF inline-<script> path,
# replacing the former hand-written interpreter. Unlicense/MIT.
boa_engine = "0.21"

# wasm has no OS RNG: getrandom's `wasm_js` backend (cfg in .cargo/config.toml)
# imports entropy from the host. Native targets use the OS backend automatically.
[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
# `rsa` → `rand_core` 0.6 pulls getrandom 0.2 transitively; enable its `js`
# backend so it compiles on wasm too (the cfg above only governs 0.3).
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }

[dev-dependencies]
# Tests run against ../../fixtures via CARGO_MANIFEST_DIR.

[features]
# Embed per-script CRNN+CTC line-OCR models (trained offline by
# tools/train_ocr_crnn.py → crates/core/src/raster/ocr_model_<group>.rs). OFF by
# default: the base build ships only the mono-glyph model (ocr_model.rs). Enabling a
# group bundles its int8 line recognizer and routes lines to it via ocr_crnn.
ocr-alpha = []   # Latin + Cyrillic + Greek
ocr-cjk = []     # Chinese / Japanese / Korean
ocr-arabic = []  # Arabic / Hebrew (RTL)
ocr-deva = []    # Devanagari
ocr-beng = []    # Bengali
ocr-taml = []    # Tamil
