[package]
name = "gigapdf-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "PDF/Office/image engine — pure-std core (no third-party PDF/Office/image lib); audited RustCrypto + Boa for crypto and JavaScript."

# The PDF/Office/image engine (lexer, object model, xref, FlateDecode, content
# editing, rasteriser, conversions) is pure `std` with NO third-party library —
# that is the project's invariant. The two exceptions below are deliberate and
# narrow: cryptography and JavaScript are domains where rolling your own is a
# liability (timing/oracle side-channels, eIDAS non-conformance; multi-year JS
# spec maintenance), so they delegate to audited, wasm-compatible Rust crates.
[dependencies]
# Audited cryptography — RustCrypto. Replaces the former hand-rolled MD5/RC4/AES/
# SHA/RSA/ASN.1/X.509/CMS behind the PDF signing + standard-security-handler glue.
rsa = { version = "0.9", features = ["sha2"] }
# `oid` gives Sha256 its AssociatedOid so rsa's prefixed PKCS#1 v1.5 SigningKey
# emits the SHA-256 DigestInfo (exactly what PDF adbe.pkcs7 signatures need).
sha2 = { version = "0.10", features = ["oid"] }
# Seeded keygen RNG + platform RNG for RSA signature blinding (rand 0.8 →
# rand_core 0.6, matching rsa; OsRng draws from getrandom on wasm).
rand = "0.8"
# Hashes + HMAC (RustCrypto) for the PDF security handler, PKCS#12 import and
# document hashing — replace the hand-rolled FIPS implementations.
sha1 = "0.10"
md-5 = "0.10"
hmac = "0.12"
# AES-CBC (constant-time, AES-NI when available) for the PDF security handler
# (AESV2/AESV3) and PKCS#12 PBES2 — replaces the hand-rolled GF(2⁸) AES.
aes = "0.8"
cbc = "0.1"
# Legacy PKCS#12 PBES1 ciphers (3DES key bags, RC2-40 cert bags) — audited.
des = "0.8"
rc2 = "0.8"
# Embedded JavaScript engine (pure Rust) for the HTML→PDF inline-<script> path,
# replacing the former hand-written interpreter. Unlicense/MIT.
boa_engine = "0.21"
# Audited ASN.1 / X.509 / CMS (RustCrypto formats) for PDF digital signatures —
# replaces the hand-rolled DER encoder + CMS/cert builders in sign/.
der = "0.7"
const-oid = "0.9"
spki = "0.7"
x509-cert = { version = "0.2", features = ["builder"] }
cms = { version = "0.2", features = ["builder"] }

# Note: the wasm32 entropy backend (getrandom) lives in the `gigapdf-wasm`
# crate (crates/wasm/src/rng.rs), which routes both getrandom majors to a host
# import. Native builds use the default OS backend; nothing is needed here.

[dev-dependencies]
# Tests run against ../../fixtures via CARGO_MANIFEST_DIR.

# No [features]: OCR moved host-side to the `gigapdf-ocr-rten` crate (PaddleOCR + RTen).
# The core stays pure-std with no optional model-embedding features.
