# Server-side OCR backend: PaddleOCR PP-OCR models run via RTen (pure-Rust ONNX
# engine, no C++ dependency). NOT part of the lean pure-std core/wasm — this crate
# carries the heavy ML deps and runs host-side; the WASM client calls it via an endpoint.
[package]
name = "gigapdf-ocr-rten"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
rten = "0.24"
rten-tensor = "0.24"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
# Native-only: rasterize a PDF page (PNG) so the OCR API can take a Document + page directly,
# restoring the end-to-end `ocr_pdf_page` surface on top of the RTen engine.
gigapdf-core = { path = "../core" }

[lib]
name = "gigapdf_ocr_rten"
path = "src/lib.rs"

[[bin]]
name = "rec_probe"
path = "src/bin/rec_probe.rs"

[[bin]]
name = "ocr_probe"
path = "src/bin/ocr_probe.rs"

[[bin]]
name = "ocr_auto"
path = "src/bin/ocr_auto.rs"

# Persistent OCR microservice — loads models once, serves recognition over a minimal local
# HTTP endpoint (the host-side endpoint the lean wasm client calls).
[[bin]]
name = "ocr_serve"
path = "src/bin/ocr_serve.rs"
