[package]
name = "gigapdf-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Browser (WebAssembly) bindings for gigapdf-core."

[lib]
crate-type = ["cdylib"]

# Only our own engine — still no third-party dependencies.
[dependencies]
gigapdf-core = { path = "../core" }
